--- a/angular7-portfolio/src/app/header/header.component.html
+++ b/angular7-portfolio/src/app/header/header.component.html
@@ -12,8 +12,8 @@
   <a  class="nav-link"  routerLink="/contact">Contact</a>
   </li>
   <li  class="nav-item">
-  <a  class="nav-link"  href="#">Admin</a>
-  </li>
+    <a  class="nav-link"  routerLink="/admin/list">Admin</a>
+    </li>
   </ul>
   </div>
   </nav>
