cambiar los css

--- a/angular7-portfolio/src/app/contact/contact.component.html
+++ b/angular7-portfolio/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
   <!-- Contact Section -->
-  <section class="page-section" id="contact">
+  <section id="contact" class="page-section" id="contact">
     <div class="container">
 
       <!-- Contact Section Heading -->
