--- a/angular7-portfolio/src/app/app.component.html
+++ b/angular7-portfolio/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-header></app-header>
 <div class="container">
   <router-outlet></router-outlet>
+  <app-portfolio></app-portfolio>
+  <app-about></app-about>
+  <app-contact></app-contact>
 </div>
 <app-footer></app-footer>
