--- a/angular7-portfolio/src/app/header/header.component.html
+++ b/angular7-portfolio/src/app/header/header.component.html
@@ -1,15 +1,15 @@
-<nav  class="navbar navbar-expand-lg navbar-light"  style="background-color: #b3cbdd;">
-  <a  class="navbar-brand"  href="#">Angular Developer</a>
+<nav  class="navbar navbar-expand-lg navbar-light" >
+  <a  class="navbar-brand"  href="#">Citlalli Portfolio</a>
   <div  class="collapse navbar-collapse"  id="navbarText">
   <ul  class="navbar-nav">
   <li  class="nav-item">
-  <a  class="nav-link"  routerLink="/home">Home</a>
+  <a  class="nav-link" href="#portfolio">Portfolio</a>
   </li>
   <li  class="nav-item">
-  <a  class="nav-link"  routerLink="/about">About</a>
+  <a  class="nav-link"  href="#about">About</a>
   </li>
   <li  class="nav-item">
-  <a  class="nav-link"  routerLink="/contact">Contact</a>
+  <a  class="nav-link"  href="#contact">Contact</a>
   </li>
   <li  class="nav-item">
     <a  class="nav-link"  routerLink="/admin/list">Admin</a>
@@ -20,3 +20,28 @@
   </ul>
   </div>
   </nav>
+
+  <!-- Masthead -->
+<header class="masthead bg-primary text-white text-center">
+  <div class="container d-flex align-items-center flex-column">
+
+    <!-- Masthead Avatar Image -->
+    <img class="masthead-avatar mb-5" src="../../assets/img/avataaars.png" alt="">
+
+    <!-- Masthead Heading -->
+    <h1 class="masthead-heading text-uppercase mb-0">Citlalli Prado</h1>
+
+    <!-- Icon Divider -->
+    <div class="divider-custom divider-light">
+      <div class="divider-custom-line"></div>
+      <div class="divider-custom-icon">
+        <i class="fas fa-star"></i>
+      </div>
+      <div class="divider-custom-line"></div>
+    </div>
+
+    <!-- Masthead Subheading -->
+    <p class="masthead-subheading font-weight-light mb-0">Marketing - Front End</p>
+
+  </div>
+</header>
