--- a/angular7-portfolio/src/app/about/about.component.css
+++ b/angular7-portfolio/src/app/about/about.component.css
@@ -20,29 +20,29 @@
 // Set custom colors**/
 :root{
     --teal: #1abc9c;
-    --dark-blue: #2c3e50 !default;
+    --dark-blue: #2c3e50;
     
     /* Override Bootstrap primary and secondary colors*/
-    --primary: var(--teal) !default;
-    --secondary: var(-dark-blue) !default;
+    --primary: var(--teal);
+    --secondary: var(--dark-blue);
     
     /*/ Override Bootstrap font variables*/
-    $font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
-    $headings-font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
-    $headings-font-weight: 700 !default;
+    --font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji';
+    --headings-font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji';
+    --headings-font-weight: 700 ;
     
     /*/ Override Bootstrap border variables*/
-    $border-width: 0.125rem !default;
-    $border-radius: 0.5rem !default;
-    $border-radius-lg: 0.75rem !default;
-    $border-radius-sm: 0.25rem !default;
+    --border-width: 0.125rem ;
+    --border-radius: 0.5rem ;
+    --border-radius-lg: 0.75rem ;
+    --border-radius-sm: 0.25rem ;
     
     /*/ Override Bootstrap input/button variables*/
-    $input-btn-border-width: $border-width !default;
+    --input-btn-border-width: var(--border-width) ;
     
     /*/ Override Bootstrap modal variables*/
-    $modal-inner-padding: 4rem 1rem !default;
-    $modal-content-border-width: 0 !default;
+    --modal-inner-padding: 4rem 1rem ;
+    --modal-content-border-width: 0 ;
 }
 
 
@@ -75,7 +75,7 @@
 .scroll-to-top a {
     width: 3.5rem;
     height: 3.5rem;
-    background-color: fade-out($gray-900, 0.5);
+    background-color: fade-out(var(--gray-900), 0.5);
     line-height: 3.1rem;
   }
 
@@ -92,9 +92,9 @@
     width: 100%;
     max-width: 7rem;
     height: 0.25rem;
-    background-color: $secondary;
+    background-color: var(--secondary);
     border-radius: 1rem;
-    border-color: $secondary !important;
+    border-color: var(--secondary) !important;
    /* &:first-child {
       margin-right: 1rem;
     }
@@ -104,7 +104,7 @@
   }
 
   .divider-custom-icon {
-    color: $secondary !important;
+    color: var(--secondary) !important;
     font-size: 2rem;
   }
   /*&.divider-light {
@@ -112,9 +112,9 @@
       background-color: $white;
     }*/
     .divider-custom-icon {
-      color: $white !important;
+      color: var(--white) !important;
     }
-  }
+  
 
 /*-----------------------       */
 .masthead {
