--- a/angular7-portfolio/src/app/portfolio/portfolio.component.css
+++ b/angular7-portfolio/src/app/portfolio/portfolio.component.css
@@ -1,6 +1,123 @@
+/*************global***************/ 
+.page-section {
+  padding: 6rem 0;
+}
 
+.page-section-heading {
+    font-size: 2.25rem;
+    line-height: 2rem;
+  }
+
+/*@include media-breakpoint-up(lg) {
+    .page-section-heading {
+      font-size: 3rem;
+      line-height: 2.5rem;
+    }
+  }*/
+
+/************** Variables  *************
+
+// Set custom colors**/
+:root{
+    --teal: #1abc9c;
+    --dark-blue: #2c3e50;
+    
+    /* Override Bootstrap primary and secondary colors*/
+    --primary: var(--teal);
+    --secondary: var(--dark-blue);
+    
+    /*/ Override Bootstrap font variables*/
+    --font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji';
+    --headings-font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji';
+    --headings-font-weight: 700 ;
+    
+    /*/ Override Bootstrap border variables*/
+    --border-width: 0.125rem ;
+    --border-radius: 0.5rem ;
+    --border-radius-lg: 0.75rem ;
+    --border-radius-sm: 0.25rem ;
+    
+    /*/ Override Bootstrap input/button variables*/
+    --input-btn-border-width: var(--border-width) ;
+    
+    /*/ Override Bootstrap modal variables*/
+    --modal-inner-padding: 4rem 1rem ;
+    --modal-content-border-width: 0 ;
+}
+
+
+/* Custom extra larg button size*/
+.btn-xl {
+  padding: 1rem 1.75rem;
+  font-size: 1.25rem;
+}
+
+/** Custom social buttons*/
+.btn-social {
+  border-radius: 100%;
+  display: inline-flex;
+  width: 3.25rem;
+  height: 3.25rem;
+  font-size: 1.25rem;
+  justify-content: center;
+  align-items: center;
+}
+
+/*/ Scroll to top button*/
+.scroll-to-top {
+  z-index: 1042;
+  right: 1rem;
+  bottom: 1rem;
+  display: none;
+  
+}
+
+.scroll-to-top a {
+    width: 3.5rem;
+    height: 3.5rem;
+    background-color: fade-out(var(--gray-900), 0.5);
+    line-height: 3.1rem;
+  }
+
+/* Custom divider with icon*/
+.divider-custom {
+  margin: 1.25rem 0 1.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.divider-custom-line {
+    width: 100%;
+    max-width: 7rem;
+    height: 0.25rem;
+    background-color: var(--secondary);
+    border-radius: 1rem;
+    border-color: var(--secondary) !important;
+   /* &:first-child {
+      margin-right: 1rem;
+    }
+    &:last-child {
+      margin-left: 1rem;
+    }*/
+  }
+
+  .divider-custom-icon {
+    color: var(--secondary) !important;
+    font-size: 2rem;
+  }
+  /*&.divider-light {
+    .divider-custom-line {
+      background-color: $white;
+    }*/
+    .divider-custom-icon {
+      color: var(--white) !important;
+    }
+  
+  
   /**************************portfolio ****************************************/
-  //* Styling for the portfolio grid section*/
+  /* Styling for the portfolio grid section*/
   .portfolio {
     margin-bottom: -30px;
     
@@ -11,7 +128,7 @@
     display: block;
     max-width: 25rem;
     margin-bottom: 30px;
-    border-radius: $border-radius;
+    border-radius: var(--border-radius);
     overflow: hidden;
     
   }
@@ -20,9 +137,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    transition: $transition-base;
+    transition: var(--transition-base);
     opacity: 0;
-    background-color: fade-out($primary, .1);
+    background-color: fade-out(var(--primary), .1);
    /* &:hover {
       opacity: 1;
     }
@@ -31,7 +148,7 @@
     }*/
   }
   
-  //* Styling for the portfolio modals*/
+  /* Styling for the portfolio modals*/
   .portfolio-modal {
     
     
@@ -51,6 +168,6 @@
     top: 1rem;
     font-size: 3rem;
     line-height: 3rem;
-    color: $primary;
+    color: var(--primary);
     opacity: 1;
   }
